# tg_docx

./: .gitignore  1380797133_document.docx  README.md  pyproject.toml
notebooks/: docs.ipynb  output.docx
tg_doc_generator/: __main__.py  doc_creator.py
tg_doc_generator/modules/: doc_creator.py
tg_doc_generator/modules/keyboards/: menu.py
tg_doc_generator/res/templates/software_registration/: description.doc  description.docx  listing.docx  pril1-211.docx  pril2-211.docx
